--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -4,3 +4,6 @@ $white: #FFFFFF;
 $bs-black-d: #000000;
 $mercury: #E1E1E1;
 $alabaster: #FAFAFA;
+
+$tablet-breakpoint: 768px;
+$desktop-breakpoint: 1024px;
