--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -1,23 +1,13 @@
 @use "./variables";
-@font-face {
-    font-family: "Avenir";
-    src: url("../../assets/Font/AvenirNextLTPro-Regular.otf") format("otf");
-    font-weight: 400;
-}
-@font-face {
-    font-family: "Avenir";
-    src: url("../../assets/Font/AvenirNextLTPro-Demi.otf") format("otf");
-    font-weight: 600;
-}
-@font-face {
-    font-family: "Avenir";
-    src: url("../../assets/Font/AvenirNextLTPro-Bold.otf") format("otf");
-    font-weight: 700;
-}
+@use "./media-query" as mediaQuery;
+@use "./font";
+
 *{
     box-sizing: border-box;
-    font-family: "Avernir";
+    font-family: "Avenir";
 }
+
+
 .primary-nav{
     display: flex;
     flex-direction: column;
