--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -13,7 +13,72 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    &__heading{
+    background-color: variables.$bs-black;
+    color: variables.$white;
+    //padding: 2rem 0rem;
 
+    &__heading{
+        @extend .sub-header--m;
+        text-transform: uppercase;
+        max-width: 7.5rem;
+        max-height: 1.25rem;
+        
     }
+    
+    &__list{
+        display: flex;
+        list-style: none;
+        align-items: center;
+        width: 100%;
+        padding:0rem;
+        color: variables.$white;
+        margin: 0rem;
+    }
+    &__item{
+        width: 100%;
+        height: 100%;
+        text-align: center;
+    }
+    &__link{
+        display: flex;
+        justify-content: center;
+        height: 100%;
+        width: 100%;
+        text-decoration: none;
+        color: variables.$mercury;
+        padding: 1.8rem 0rem;
+
+        &--active{
+            color: variables.$white;
+            border-bottom: 4px solid variables.$white;
+        }
+        &:hover{
+
+            border-bottom: 4px solid variables.$white;
+        }
+    }
+}
+
+@include mediaQuery.tablet{
+    .primary-nav{
+        flex-direction: row;
+        justify-content: flex-start;
+        
+        &__heading{
+            margin:0rem 2rem;
+            
+        }
+        &__list{
+            justify-content: space-between;
+            align-items: center;
+            width: 20%;
+        }
+        &__item{
+            width: auto;
+        }
+    }
+}
+
+@include mediaQuery.desktop{
+
 }
