--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -4,6 +4,6 @@ $white: #FFFFFF;
 $bs-black-d: #000000;
 $mercury: #E1E1E1;
 $alabaster: #FAFAFA;
-
+$bs-black-overlay: rgba(50,50,50,0.5);
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
