--- a/styles/partials/_font.scss
+++ b/styles/partials/_font.scss
@@ -1,76 +1,99 @@
 @font-face {
-    font-family: "Avenir";
-    src: url("../../assets/Font/AvenirNextLTPro-Regular.otf") format("otf");
-    font-weight: 400;
+  font-family: "Avenir";
+  src: url("../../assets/Font/AvenirNextLTPro-Regular.otf") format("otf");
+  font-weight: 400;
 }
 @font-face {
-    font-family: "Avenir";
-    src: url("../../assets/Font/AvenirNextLTPro-Demi.otf") format("otf");
-    font-weight: 600;
+  font-family: "Avenir";
+  src: url("../../assets/Font/AvenirNextLTPro-Demi.otf") format("otf");
+  font-weight: 600;
 }
 @font-face {
-    font-family: "Avenir";
-    src: url("../../assets/Font/AvenirNextLTPro-Bold.otf") format("otf");
-    font-weight: 700;
+  font-family: "Avenir";
+  src: url("../../assets/Font/AvenirNextLTPro-Bold.otf") format("otf");
+  font-weight: 700;
 }
 
-.page-header{
+@mixin page-header($size) {
+  @if $size == "small" {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: bold;
+  } @else if $size == "large" {
     font-size: 3.75rem;
     line-height: 4.25rem;
     font-weight: 700;
-    &--m{
-        font-size: 1.5rem;
-        line-height: 2rem;
-        font-weight: bold;
-    }
+  }
 }
-.section-header{
+
+@mixin section-header($size) {
+  @if $size == "small" {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+  } @else if $size == "large" {
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 700;
-    &--m{
-        font-size: 1.5rem;
-        line-height: 2rem;
-        font-weight: 700;
-    }
+  }
 }
-.sub-header{
+
+@mixin sub-header($size) {
+  @if $size == "small" {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+  } @else if $size == "large" {
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 600;
-    &--m{
-        font-size: 0.875rem;
-        line-height: 1.375rem;
-        font-weight: 600;
-    }
+  }
 }
-.body-copy{
+
+@mixin body-copy($size) {
+  @if $size == "small" {
+    font-size: 0.813rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+  } @else if $size == "large" {
     font-size: 0.875rem;
     line-height: 1.475rem;
     font-weight: 400;
-    &--m{
-        font-size: 0.813rem;
-        line-height: 1.125rem;
-        font-weight: 400;
-    }
+  }
 }
-.footer-copy{
+
+@mixin footer-copy($size) {
+  @if $size == "small" {
+    font-size: 0.813rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+  } @else if $size == "large" {
     font-size: 0.875rem;
     line-height: 1.25rem;
     font-weight: 400;
-    &--m{
-        font-size: 0.813rem;
-        line-height: 1.125rem;
-        font-weight: 400;
-    }
+  }
 }
-.label-text,.button-text{
+
+@mixin label-text($size) {
+  @if $size == "small" {
+    font-size: 0.625rem;
+    line-height: 1.25rem;
+    font-weight: 700;
+  } @else if $size == "large" {
     font-size: 0.75rem;
     line-height: 1.25rem;
     font-weight: 700;
-    &--m{
-        font-size: 0.625rem;
-        line-height: 1.25rem;
-        font-weight: 700;
-    }
+  }
+}
+
+@mixin button-text($size) {
+  @if $size == "small" {
+    font-size: 0.625rem;
+    line-height: 1.25rem;
+    font-weight: 700;
+  } @else if $size == "large" {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+    font-weight: 700;
+  }
 }
