--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -123,7 +123,7 @@ html,body{
         &__list{
             justify-content: space-between;
             align-items: center;
-            width: 20%;
+            width: 10rem;
         }
         &__item{
             width: auto;
@@ -132,8 +132,53 @@ html,body{
             padding: 1rem 0rem;
         }
     }
+
+    .footer{
+        padding: 2rem 2rem;
+        position: relative;
+        //flex-direction: row;
+        &__heading{
+            @include fontStyle.section-header(large);
+        }
+        &__container{
+            position: absolute;
+            top: 5%;
+            right: 41%;
+        }
+        .company{
+            flex-direction: row;
+            justify-content: space-between;
+
+            &__heading{
+                @include fontStyle.footer-copy(large);
+                font-weight: 600;
+            }
+            &__text{
+                @include fontStyle.footer-copy(large);
+
+            }
+        }
+        &__logo{
+            margin: 0;
+            position: absolute;
+            right: 2rem;
+            top: 14%;
+        }
+        &__text{
+            @include fontStyle.footer-copy(large);
+        }
+    }
 }
 
 @include mediaQuery.desktop{
+    .primary-nav{
+        padding: 0rem 6rem 0rem;
+    }
+    .footer{
+        padding: 2rem 6rem;
 
+        &__logo{
+            right: 6rem;
+        }
+    }
 }
