--- a/styles/shows.css
+++ b/styles/shows.css
@@ -248,13 +248,13 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(50, 50, 50, 0.5);
-  display: flex;
-  flex-direction: column;
   justify-content: center;
 }
 .hero__container {
   padding: 1rem;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .hero__album {
   font-size: 0.875rem;
@@ -281,46 +281,54 @@ body {
   flex-direction: column;
   padding: 0 1rem;
 }
-.shows__heading {
+.shows__header {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
   padding: 1.5rem 0 1rem;
   margin: 0;
 }
+.shows__right {
+  display: flex;
+  flex-direction: column;
+}
+.shows__labels__list {
+  display: none;
+}
 .shows__container {
   display: flex;
   flex-direction: column;
   border-bottom: 1px solid #E1E1E1;
 }
-.shows__title {
+.shows__container--hidden {
+  display: none;
+}
+.shows__list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.shows__label {
   color: #AFAFAF;
   text-transform: uppercase;
   font-size: 0.813rem;
   line-height: 1.125rem;
   font-weight: 400;
   margin: 0;
-}
-.shows__date {
-  font-size: 0.875rem;
-  line-height: 1.375rem;
+  width: 30%;
+  font-size: 0.65rem;
   font-weight: 600;
-  padding: 1rem 0;
-  margin: 0;
 }
-.shows__venue {
+.shows__item {
   font-size: 0.813rem;
   line-height: 1.125rem;
   font-weight: 400;
-  padding: 1rem 0;
+  padding: 0.2rem 0 1rem 0;
   margin: 0;
+  width: 100%;
 }
-.shows__location {
-  font-size: 0.813rem;
-  line-height: 1.125rem;
-  font-weight: 400;
-  padding: 1rem 0;
-  margin: 0;
+.shows__item--bold {
+  font-weight: 600;
 }
 .shows__btn {
   background-color: #323232;
@@ -334,4 +342,131 @@ body {
 }
 .shows__btn:hover {
   background-color: #000000;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    height: 450px;
+  }
+  .hero__container {
+    padding: 0 2.25rem;
+  }
+  .hero__album {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
+    padding: 3rem 0 2.25rem;
+    padding-bottom: 1rem;
+  }
+  .hero__heading {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    font-weight: 700;
+    padding: 3rem 0 2.25rem;
+    padding-top: 0;
+    margin: 0;
+    width: 70%;
+  }
+  .hero__music {
+    width: 60%;
+    height: 150px;
+  }
+  .shows {
+    padding: 0 1rem;
+    padding-bottom: 2.25rem;
+  }
+  .shows__header {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 700;
+    padding: 3rem 0 2.25rem;
+    margin: 0;
+    margin-left: 1.25rem;
+  }
+  .shows__labels__list {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    width: 73%;
+    justify-content: space-between;
+    text-align: left;
+    padding: 0;
+    margin: 0;
+    margin-left: 1.25rem;
+  }
+  .shows__container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .shows__container:hover {
+    background-color: #FAFAFA;
+  }
+  .shows__container--active {
+    background-color: #E1E1E1;
+  }
+  .shows__list {
+    display: flex;
+    flex-direction: row;
+    width: 75%;
+    justify-content: space-between;
+  }
+  .shows__label {
+    padding: 0;
+    width: 34%;
+  }
+  .shows__label--tablet {
+    display: none;
+  }
+  .shows__item {
+    font-size: 0.875rem;
+    line-height: 1.475rem;
+    font-weight: 400;
+    padding: 1.5rem 0;
+  }
+  .shows__item--bold {
+    font-weight: 600;
+    margin-left: 1.25rem;
+  }
+  .shows__btn {
+    width: 10rem;
+    margin: 0;
+    margin-right: 1rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero {
+    height: 550px;
+  }
+  .hero__container {
+    width: 1020px;
+    margin: auto;
+    padding: 0;
+    justify-content: center;
+  }
+  .hero__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .hero__heading {
+    width: 50%;
+  }
+  .hero__music {
+    width: 40%;
+    height: 120px;
+  }
+  .shows {
+    flex-direction: row;
+    width: 1020px;
+    margin: auto;
+    padding: 0;
+    justify-content: space-between;
+    padding-bottom: 2.25rem;
+  }
+  .shows__right {
+    width: 80%;
+    padding-top: 3rem;
+  }
 }/*# sourceMappingURL=shows.css.map */
