fixed the textect color for about, comment, photogallery and shows sections

--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,10 +1,10 @@
-$bs-black: #323232;
-$silver: #AFAFAF;
-$white: #FFFFFF;
-$bs-black-d: #000000;
-$mercury: #E1E1E1;
-$alabaster: #FAFAFA;
+$primary-bg: #323232;
+$secondary-text: #AFAFAF;
+$primary-text-light: #FFFFFF;
+$secondary-bg: #000000;
+$line-color: #E1E1E1;
+$light-bg: #FAFAFA;
 $error: #D22D2D;
-$bs-black-overlay: rgba(50,50,50,0.5);
+$black-overlay: rgba(50,50,50,0.5);
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
