--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -18,10 +18,9 @@
   font-weight: 700;
 }
 
-html,
-body {
+* {
   box-sizing: border-box;
-  font-family: "Avenir";
+  font-family: "Avenir", Arial, Helvetica, sans-serif;
   margin: 0;
 }
 
@@ -34,8 +33,8 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  background-color: variables.$bs-black;
-  color: variables.$white;
+  background-color: variables.$primary-bg;
+  color: variables.$primary-text-light;
 
   &__logo {
     @extend .logo;
@@ -47,7 +46,7 @@ body {
     list-style: none;
     align-items: center;
     width: 100%;
-    color: variables.$white;
+    color: variables.$primary-text-light;
     margin: 0rem;
     padding: 0;
   }
@@ -64,22 +63,22 @@ body {
     height: 100%;
     width: 100%;
     text-decoration: none;
-    color: variables.$mercury;
+    color: variables.$line-color;
     padding: 0.75rem 0rem;
 
     &--active {
-      color: variables.$white;
-      border-bottom: 4px solid variables.$white;
+      color: variables.$primary-text-light;
+      border-bottom: 4px solid variables.$primary-text-light;
       font-weight: 600;
     }
     &:hover {
-      border-bottom: 4px solid variables.$white;
+      border-bottom: 4px solid variables.$primary-text-light;
     }
   }
 }
 .footer {
-  background-color: variables.$bs-black;
-  color: variables.$white;
+  background-color: variables.$primary-bg;
+  color: variables.$primary-text-light;
 
   &__container {
     @include style.section-padding(mobile);
@@ -120,7 +119,7 @@ body {
     &__email {
       @include style.footer-copy(small);
       text-decoration: none;
-      color: variables.$white;
+      color: variables.$primary-text-light;
       margin: 0;
       padding-top: 1rem;
     }
@@ -213,7 +212,7 @@ body {
     padding: 0 7rem;
 
     &__list{
-      width: 8rem;
+      width: 10rem;
     }
   }
   .footer {
