--- a/styles/shows.css
+++ b/styles/shows.css
@@ -33,7 +33,7 @@
   color: #FFFFFF;
 }
 .primary-nav__logo {
-  padding: 1rem 0rem 0.5rem;
+  margin-top: 1rem;
 }
 .primary-nav__list {
   display: flex;
@@ -146,6 +146,7 @@
   }
   .primary-nav__logo {
     padding: 0;
+    margin: 0;
   }
   .primary-nav__logo-link {
     margin-right: 2.25rem;
@@ -239,9 +240,9 @@
   background-image: url("../assets/images/hero-shows.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center 25%;
   margin: 0rem;
-  height: 350px;
+  height: 320px;
 }
 .hero__layer {
   width: 100%;
@@ -279,6 +280,7 @@
   display: flex;
   flex-direction: column;
   padding: 0 1rem;
+  padding: 1rem;
 }
 .shows__header {
   font-size: 1.5rem;
