--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -7,17 +7,15 @@
     background-image: url("../assets/images/hero-shows.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center 25%;
     margin: 0rem;
-    height: 350px;
+    height: 320px;
 
     &__layer{
         width: 100%;
         height: 100%;
         background-color: variables.$black-overlay;
-        
         justify-content: center;
-        
     }
     &__container{
         padding: 1rem;
@@ -47,6 +45,7 @@
     display: flex;
     flex-direction: column;
     @include style.section-padding(mobile);
+    padding: 1rem;
     &__header{
         @include style.section-header(small);
         @include style.header-padding(small);
