fixed the font size for comment section heading

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -124,7 +124,7 @@
   }
   &__logo {
     @extend .logo;
-    padding-top: 3rem;
+    margin-top: 3rem;
   }
   &__text {
     @include style.footer-copy(small);
@@ -197,6 +197,7 @@
       position: absolute;
       right: 2.25rem;
       top: 16%;
+      margin: 0;
     }
     &__text {
       @include style.footer-copy(large);
